--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>UniSyncing - Campus Events</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&amp;display=swap" rel="stylesheet">
+  <meta name="google-site-verification" content="RvdFccruIIX8fvWSqQG1Wo8qAANWME1_TwWFRTHOVL4" />
   
   <!-- Original Styles from Canva Code -->
   <style>
